[tool.poetry]
name = "1-BIT #2"
version = "0.0.1"
description = ""
authors = ["Ynda Jas <yndajas@gmail.com>", "Weli Yu"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
gdtoolkit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
