[tool.poetry]
name = "It's Closing Time!"
version = "1.2.0"
description = ""
authors = ["Ynda Jas <yndajas@gmail.com>", "Weli Yu"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
gdtoolkit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
